--- a/static/css/movie_status_popup.css
+++ b/static/css/movie_status_popup.css
@@ -40,6 +40,10 @@ div#title p{
 div#title span#title{
     font-size: 2em;
     float: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 75%;
 }
 
 button{
